<resources>
    <string name="app_name">1pour1</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="text_your_name">Name</string>
    <string name="text_firstname">Firstname</string>
    <string name="text_surname">Surname</string>
    <string name="text_email">Email</string>
    <string name="text_phone">Phone</string>
    <string name="text_adresse">Adresse</string>
    <string name="text_city">city</string>
    <string name="text_password">Password</string>
    <string name="text_productname">ProductName</string>
    <string name="text_brand">Brand</string>
    <string name="text_description">Description</string>
    <string name="text_date">Date</string>
    <string name="text_age">Age</string>
    <string name="text_addProduct">Add Product</string>
    <string name="text_title">Title</string>
    <string name="text_date_debut">Date Beginning</string>
    <string name="text_date_fin">Date end</string>
    <string name="text_add_service">Add Service</string>

    <!-- for add service activity -->
    <string name="pick_time">Choose Time</string>
    <string name="pick_date">Choose Date</string>
    <string name="prompt_service_title">Title</string>

    <!-- for my products/ services layout -->
    <string name="prompt_my_products">My Products</string>
    <string name="prompt_my_services">My Services</string>
</resources>
